RESOLVED FIXED308299
[YARR] Skip dead errorCodePoint checks in 16-bit ignoreCase backreference loop for non-Unicode patterns
https://bugs.webkit.org/show_bug.cgi?id=308299
Summary [YARR] Skip dead errorCodePoint checks in 16-bit ignoreCase backreference loo...
Sosuke Suzuki
Reported 2026-02-20 06:45:29 PST
...
Attachments
Sosuke Suzuki
Comment 1 2026-02-20 06:47:10 PST
Radar WebKit Bug Importer
Comment 2 2026-02-27 06:46:11 PST
EWS
Comment 3 2026-03-03 20:41:16 PST
Committed 308607@main (d25fc500fa94): <https://commits.webkit.org/308607@main> Reviewed commits have been landed. Closing PR #59089 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.